# llm-paper-radar

./: .env.example  .gitignore  AGENTS.md  INDEX.md  LICENSE  README-0515-0521.md  README-251122-260522.md  README-251122-260524.md  README.md  SETUP.md  config.yaml  install.sh  pyproject.toml  seeds.yaml
data/: seen.json
digests/: 2025-11-21.md  2025-11-22.md  2025-11-23.md  2025-11-24.md  2025-11-25.md  2025-11-26.md  2025-11-27.md  2025-11-28.md  2025-11-29.md  2025-11-30.md  2025-12-01.md  2025-12-02.md  2025-12-03.md  2025-12-04.md  2025-12-05.md  2025-12-06.md  2025-12-07.md  2025-12-08.md  2025-12-09.md  2025-12-10.md  2025-12-11.md  2025-12-12.md  2025-12-13.md  2025-12-14.md  2025-12-15.md  2025-12-16.md  2025-12-17.md  2025-12-18.md  2025-12-19.md  2025-12-20.md  2025-12-21.md  2025-12-22.md  2025-12-23.md  2025-12-24.md  2025-12-25.md  2025-12-26.md  2025-12-27.md  2025-12-28.md  2025-12-29.md  2025-12-30.md  (+257 more)
docs/: PLAN.md  SPEC.md
interpretations/: README.md
paper-river/: 1BitWonder-2602.15563.org  1BitWonder-2602.15563_en.org  AAAC-2605.08692.org  AAAC-2605.08692_en.org  ADMM-Q-2605.11222.org  ADMM-Q-2605.11222_en.org  AFR-2607.08027.org  AFR-2607.08027_en.org  AGoQ-2605.00539.org  AGoQ-2605.00539_en.org  AIMER-2603.18492.org  AIMER-2603.18492_en.org  ALT-2511.17809.org  ALT-2511.17809_en.org  AMP-2512.21651.org  AMP-2512.21651_en.org  ARCQuant-2601.07475.org  ARCQuant-2601.07475_en.org  ARKV-2603.08727.org  ARKV-2603.08727_en.org  ASL-2601.07667.org  ASL-2601.07667_en.org  ActSens-2601.11663.org  ActSens-2601.11663_en.org  AdaHOP-2604.02525.org  (+886 more)
(+504 files in other folders)
